--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
                         url('class-background.jpg'); 
             background-size: cover;
-            background-position: center;
+            background-position: 70% center;
             background-attachment: fixed;
             font-family: 'Montserrat', sans-serif;
             color: var(--white);
@@ -269,4 +269,5 @@
         }
     </script>
 </body>
+
 </html>
