--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
             <button class="btn-memories" onclick="toggle()">Show Memories Grid</button>
 
             <div id="photo-grid">
-                <img src="https://via.placeholder.com/300" class="grid-img">
-                <img src="https://via.placeholder.com/300" class="grid-img">
-                <img src="https://via.placeholder.com/300" class="grid-img">
-                <img src="https://via.placeholder.com/300" class="grid-img">
+                <img src="1.png.jepg" class="grid-img">
+                <img src="2.png.jepg" class="grid-img">
+                <img src="3.png.jepg" class="grid-img">
+                <img src="4.jepg" class="grid-img">
             </div>
 
         </div>
@@ -211,3 +211,4 @@
     </script>
 </body>
 </html>
+
